# sugg

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  i18n.d.ts  leetcode.ts  task.nu
.cargo/: config.toml
.github/workflows/: release.yml
assets/: completion.d.ts  tsconfig.json
assets/init/.sugg/: collect-cli-help.md
crates/sugg-ast/: Cargo.toml
crates/sugg-ast/src/: lib.rs
crates/sugg-cli/: Cargo.toml
crates/sugg-cli/src/: main.rs
crates/sugg-core/: Cargo.toml
crates/sugg-core/src/: lib.rs  logger.rs
crates/sugg-core/src/cache/: disk.rs  mod.rs  structs.rs
crates/sugg-core/src/js/: mod.rs  runtime.rs
crates/sugg-deploy/: Cargo.toml
crates/sugg-deploy/src/: main.rs
crates/sugg-engine/: Cargo.toml
crates/sugg-engine/assets/init/: AGENTS.md
crates/sugg-engine/assets/init/.sugg/: collect-cli-help.md  sugg-guide.md  sugg.d.ts
crates/sugg-engine/assets/init/init/.sugg/: sugg-guide.md
crates/sugg-engine/assets/init/init/sugg/i18n/: en.json
crates/sugg-engine/assets/init/sugg/: index.ts
crates/sugg-engine/assets/init/sugg/i18n/: zh.json
crates/sugg-engine/assets/shell/: bash.sh  fish.fish  nushell.nu  powershell.ps1  zsh.zsh
crates/sugg-engine/assets/shell/shell/: nushell.nu
crates/sugg-engine/src/: ast.rs  build.rs  i18n.rs  icu_utils.rs  init.rs  install.rs  lib.rs  locale.rs  main.rs  upgrade.rs
crates/sugg-engine/src/bundler/: codegen.rs  constants.rs  env.js  mod.rs  plugin.rs
crates/sugg-wasm/: Cargo.toml
crates/sugg-wasm/src/: lib.rs
scripts/: install.ps1  install.sh
src/: ast.rs  lib.rs  logger.rs
src/bundler/: bundler.rs  constants.rs  mod.rs  plugin.rs
src/cache/: mod.rs  structs.rs
src/js/: codegen.rs  env.js  mod.rs  runtime.rs
tests/: bundle.rs  download_test.rs  i18n_gen.rs  integration.rs  unmatched.rs
tests/common/: mod.rs
tests/fixtures/completions/: _lib.ts  bun.ts  completion.d.ts  greet.ts  greet_dynamic.ts  i18n.d.ts  pnpm.ts  testkit.ts  tsconfig.json
tests/fixtures/completions/bun/: index.ts
tests/fixtures/completions/bun/i18n/: en.json  zh.json
tests/fixtures/completions/cache_stem/: index.ts
tests/fixtures/completions/docker/: index.ts
tests/fixtures/completions/docker/i18n/: en.json  zh.json
tests/fixtures/completions/git/: index.ts
tests/fixtures/completions/greet/i18n/: en.json  zh.json
tests/fixtures/completions/greet_dynamic/i18n/: en.json  zh.json
tests/fixtures/projects/bun/: index.ts  package.json  server.js
tests/fixtures/projects/bun_x_vs_run/: package.json
tests/snapshots/bundle/: bundle__bundle_docker_dynamic.snap  bundle__bundle_dynamic_en.snap  bundle__bundle_dynamic_zh.snap  bundle__bundle_greet_en.snap  bundle__bundle_greet_zh.snap
tests/snapshots/i18n_gen/: i18n_gen__i18n_gen_empty_i18n_dir.snap  i18n_gen__i18n_gen_fixture_keys.snap  i18n_gen__i18n_gen_greet_keys.snap  i18n_gen__i18n_gen_keys_are_sorted.snap  i18n_gen__i18n_gen_merges_keys_from_multiple_files.snap  i18n_gen__i18n_gen_nested_keys.snap
tests/snapshots/integration/: integration__args_count_command.snap  integration__args_count_option.snap  integration__args_count_zero.snap  integration__bun_run_src_com_partial.snap  integration__bun_run_src_components_path.snap  integration__bun_run_src_path.snap  integration__bun_run_vs_x__run.snap  integration__bun_run_vs_x__x.snap  integration__ctx_args_positional.snap  integration__display_value_scenarios.snap  integration__double_dash_stops_option_parsing.snap  integration__double_dash_subcommand_completion.snap  integration__dynamic_reuse_at_runtime.snap  integration__git_remote_add_positional.snap  integration__i18n_bundle_dynamic_en.snap  integration__i18n_bundle_greet_en.snap  integration__i18n_dynamic_en.snap  integration__i18n_dynamic_zh.snap  integration__i18n_folder_format_en.snap  integration__i18n_folder_format_zh.snap  integration__i18n_greet_subcommands_en.snap  integration__i18n_greet_subcommands_zh.snap  integration__node_with_both_commands_and_args.snap  integration__option_args_completion.snap  integration__option_with_style.snap  integration__options_passed_to_dynamic.snap  integration__real_bun_project_run_scripts.snap  integration__root_command_cleaning.snap  integration__testkit_display_value.snap  integration__testkit_double_dash_stops_option_parsing.snap  integration__testkit_dynamic_reuse.snap  integration__testkit_empty_args_option.snap  integration__testkit_hybrid.snap  integration__testkit_logdemo.snap  integration__testkit_option_value_completion.snap  integration__testkit_options_passed_to_dynamic.snap  integration__top_level_commands.snap
tests/snapshots/unmatched/: unmatched__option_completion_on_dash.snap  unmatched__unmatched_after_option.snap  unmatched__unmatched_word_with_non_empty_prefix_filters_dynamic.snap  unmatched__valid_subcommand_trailing_space.snap
