[package]
name = "sugg"
version = "0.1.0"
edition = "2024"

[dependencies]
memmap2 = "0.9.10"
oxc = { version = "0.128.0", default-features = false }
rkyv = { version = "0.8.16" }
rolldown = { git = "https://github.com/rolldown/rolldown.git", tag = "v1.0.0-rc.18" }
rolldown_common = { git = "https://github.com/rolldown/rolldown.git", tag = "v1.0.0-rc.18" }

rquickjs = { version = "0.11.0", features = ["futures"] }
tokio = { version = "1.52.2", features = ["rt", "macros", "fs", "process"] }
dirs-next = "2.0.0"
chrono = "0.4.44"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
anyhow = "1.0.102"
clap = { version = "4.5", features = ["derive"] }
lexopt = "0.3.2"
self-replace = "1.5.0"
include_dir = "0.7.4"
icu = { version = "2.2.0", features = ["compiled_data"] }
console = "0.16.3"

[dev-dependencies]
insta = { version = "1.39", features = ["json"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "sugg"
path = "src/bin/sugg.rs"

[[bin]]
name = "sugg-engine"
path = "src/bin/sugg_engine/main.rs"

[profile.release]
# 开启 Fat LTO，进行跨 Crate 全局优化
lto = "fat"

# 减少并行代码生成单元的数量（1 可以让 LTO 获得最大的优化空间，但编译最慢）
codegen-units = 1

# 优化等级："z" 或 "s" 专注于减小体积（"z" 比 "s" 更激进）
opt-level = "z"

# 发生 panic 时直接终止，不生成展开（unwind）代码，能显著减少体积
panic = "abort"

# 移除二进制文件中的调试符号（等同于执行 strip 命令）
strip = true
