[workspace]
members = [
    "crates/sugg-core",
    "crates/sugg-engine",
    "crates/sugg-cli",
    "crates/sugg-deploy",
]
# 添加此行：指定默认编译和测试成员
default-members = [
    "crates/sugg-core",
    "crates/sugg-engine",
    "crates/sugg-cli",
    "crates/sugg-deploy",
    ".",                  # "." 表示根目录下的 sugg-tests 包
]
resolver = "2"

[workspace.package]
version = "0.2.9"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]

[workspace.dependencies]
# 共享依赖
sugg-core = { path = "crates/sugg-core" }
sugg-engine = { path = "crates/sugg-engine" }
anyhow = "1.0.102"
tokio = { version = "1.52.3", features = ["rt", "macros", "fs", "process"] }
rquickjs = { version = "0.11.0", features = ["futures"] }
rkyv = { version = "0.8.16" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
console = "0.16.3"
dirs-next = "2.0.0"
tempfile = "3.27.0"

[workspace.dependencies.insta]
version = "1.39"
features = ["json"]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = true

# 根包：仅用于托管集成测试
[package]
name = "sugg-tests"
version.workspace = true
edition.workspace = true
publish = false

[dev-dependencies]
sugg-core.workspace = true
sugg-engine.workspace = true
insta.workspace = true
tempfile.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio.workspace = true
