[package]
name = "sugg-engine"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sugg-engine"
path = "src/main.rs"

[dependencies]
sugg-core.workspace = true
anyhow.workspace = true
tokio.workspace = true
rquickjs.workspace = true
rkyv.workspace = true
serde_json.workspace = true
serde.workspace = true

# 重型依赖
oxc = { version = "0.133.0", default-features = false, features = [
    "ast_visit",
] }
rolldown = { version = "1.0.3" }
rolldown_common = { version = "1.0.3" }
icu = { version = "2.2.0", features = ["compiled_data"] }

# CLI & 其他工具
console.workspace = true
clap = { version = "4.6", features = ["derive"] }
include_dir = "0.7.4"
tempfile.workspace = true
reqwest = { version = "0.13", default-features = false, features = [
    "rustls",
    "rustls-native-certs",
    "json",
    "stream",
] }
indicatif = "0.18"
