[package]
name = "sugg-engine"
version.workspace = true
edition.workspace = true

[lib]
name = "sugg_engine"
path = "src/lib.rs"

[[bin]]
name = "sugg-engine"
path = "src/main.rs"

[dependencies]
sugg-core.workspace = true
sugg-ast.workspace = true
anyhow.workspace = true
tokio.workspace = true
rquickjs.workspace = true
rkyv.workspace = true
serde_json.workspace = true
serde.workspace = true

# 重型依赖
oxc.workspace = true
rolldown = { version = "1.1" }
rolldown_common = { version = "1.1" }
icu = { version = "2.2.0", features = ["compiled_data"] }

# CLI & 其他工具
console.workspace = true
clap = { version = "4.6", features = ["derive"] }
include_dir = "0.7.4"
tempfile.workspace = true
reqwest.workspace = true
indicatif = "0.18"
sys-locale = "0.3.2"
